<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.tipcalculator.MainActivity">
<GridLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/editText_BillAmount"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_margin="@dimen/inputbox_margin"
        android:layout_marginBottom="5dp"
        android:autofillHints="amount"
        android:background="@color/input_bar_color"
        android:ems="10"
        android:hint="@string/amount"
        android:inputType="numberDecimal"
        android:maxLength="12"
        android:padding="@dimen/padding_textView_default"
        android:textAlignment="viewEnd"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/enter_amount"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_margin="@dimen/inputbox_margin"
        android:text="@string/enter_amount"
        android:textSize="@dimen/text_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/progressView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnSpan="1"

        android:layout_marginStart="@dimen/text_margin_left"

        android:text="@string/progress"
        android:textAlignment="viewEnd"
        android:textSize="@dimen/text_size" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="@dimen/seekbar_margin_top"
        android:layout_marginRight="10dp" />

    <TextView
        android:id="@+id/tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_marginStart="@dimen/text_margin_left"
        android:layout_marginTop="10dp"
        android:padding="@dimen/padding_textView_default"
        android:text="@string/tip"
        android:textSize="@dimen/text_size" />

    <TextView
        android:id="@+id/tipView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_columnSpan="1"
        android:layout_gravity="fill_horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/backgroundBillAmount"
        android:gravity="end"
        android:padding="@dimen/padding_textView_default"
        android:text="@string/tip_total"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/totalView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_marginStart="@dimen/text_margin_left"
        android:layout_marginTop="10dp"

        android:text="@string/total"
        android:textSize="@dimen/text_size" />

    <TextView
        android:id="@+id/textView_BillAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="1"
        android:layout_columnSpan="1"
        android:layout_gravity="fill_horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"

        android:background="@color/backgroundBillAmount"
        android:gravity="end"
        android:padding="@dimen/padding_textView_default"
        android:text="@string/total_amount"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_marginTop="10dp"
        android:layout_width="108dp"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal" />

    <TextView
        android:id="@+id/num_of_people"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="1"
        android:layout_columnSpan="1"
        android:layout_gravity="fill_horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:gravity=""
        android:padding="@dimen/padding_textView_default"
        android:text="@string/num_people_splitting"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        />

    <RadioGroup
        android:id="@+id/rb_group_rounding_options"
        android:layout_column="1"
        android:layout_row="5"
        android:padding="8dp"
        >
        <RadioButton
            android:id="@+id/rb_no_round"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="No Round"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton
            android:id="@+id/rb_tip_round"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Round Tip"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton
            android:id="@+id/rb_total_round"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Round Total"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>
    <TextView
        android:id="@+id/per_person_total_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="6"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"

        android:text="@string/text_per_person_total"
        android:textSize="@dimen/text_size" />


    <TextView
        android:id="@+id/per_person_total"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_row="6"
        android:layout_column="1"
        android:layout_columnSpan="1"
        android:layout_gravity="fill_horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"

        android:background="@color/backgroundBillAmount"
        android:gravity="end"
        android:padding="@dimen/padding_textView_default"
        android:text="@string/total_amount"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textStyle="bold" />
</GridLayout>
</RelativeLayout>
